Stop command route
